added basic HTML structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-
+    <header></header>
+    <sectionid id="searchContainer">
+        <h1>Search for a City:</h1>
+        <input type="text" placeholder="Search!" id="search-input">
+        <button>Search</button>
+        <div id="cityList"></div>
+    </section>
+    <section id="presentContainer">
+        <h2 id="presentCity"></h2>
+    </section>
+    <Section id="futureContainer">
+        <h3>5-day Forecast:</h3>
+        <div id="dayCards"></div>
+    </Section>
 </body>
 </html>
