--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <i>Weather Dashboard</i>
+    </header>
     <sectionid id="searchContainer">
         <h1>Search for a City:</h1>
-        <input type="text" placeholder="Search!" id="search-input">
-        <button>Search</button>
+        <input type="text" placeholder="City Name" id="search-input">
+        <button id="search-button">Search</button>
         <div id="cityList"></div>
     </section>
     <section id="presentContainer">
@@ -20,5 +22,6 @@
         <h3>5-day Forecast:</h3>
         <div id="dayCards"></div>
     </Section>
+    <script src="./assets/java/script.js"></script>
 </body>
 </html>
