added function to retrieve data from localstorage and parse back to original format

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <button id="search-button">Search</button>
         <div id="cityList"></div>
     </section>
-    <section id="presentContainer">
+    <section id="todayContainer">
         <h2 id="presentCity"></h2>
     </section>
-    <Section id="futureContainer">
+    <Section id="forecastContainer">
         <h3>5-day Forecast:</h3>
         <div id="dayCards"></div>
     </Section>
