declared a function to get the forecast data from the API as well

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <i>Weather Dashboard</i>
@@ -14,14 +16,14 @@
         <input type="text" placeholder="City Name" id="search-input">
         <button id="search-button">Search</button>
         <div id="cityList"></div>
-    </section>
-    <section id="todayContainer">
-        <h2 id="presentCity"></h2>
-    </section>
-    <Section id="forecastContainer">
-        <h3>5-day Forecast:</h3>
-        <div id="dayCards"></div>
-    </Section>
-    <script src="./assets/java/script.js"></script>
+        </section>
+        <section id="todayContainer">
+        </section>
+        <Section id="futureContainer">
+            <h3>5-day Forecast:</h3>
+            <div id="dayCards"></div>
+        </Section>
+        <script src="./assets/java/script.js"></script>
 </body>
+
 </html>
