--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -19,7 +20,7 @@
         </section>
         <section id="todayContainer">
         </section>
-        <Section id="futureContainer">
+        <Section id="forecastContainer">
             <h3>5-day Forecast:</h3>
             <div id="dayCards"></div>
         </Section>
